Replace .butt--delete buttons w/ .butt--text

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -344,7 +344,7 @@
 
 							<div class="[ row justify-content-center ]">
 								<div class="[ col-12 text-right pb-4 ]">
-									<button id="js-create_org" class="js-create-modal butt butt--create [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_org">Create</button>
+									<button id="js-create_org" class="js-create-modal butt butt--text [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_org">Create</button>
 									<button id="js-add_org" class="js-add-li butt butt--add" type="button">Add</button>
 								</div>
 							</div>
@@ -375,7 +375,7 @@
 
 							<div class="[ row justify-content-center ]">
 								<div class="[ col-12 text-right pb-4 ]">
-									<button id="js-create_artwork" class="js-create-modal butt butt--create [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artwork">Create</button>
+									<button id="js-create_artwork" class="js-create-modal butt butt--text [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artwork">Create</button>
 									<button id="js-add_exhibition" class="js-add-li butt butt--add" type="button">Add</button>
 								</div>
 							</div>
@@ -458,7 +458,7 @@
 
 								<div class="[ row justify-content-center ]">
 									<div class="[ col-12 text-right pb-4 ]">
-										<button id="js-create_artist" class="js-create-modal butt butt--create [ m-1 mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artist">Create</button>
+										<button id="js-create_artist" class="js-create-modal butt butt--text [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artist">Create</button>
 										<button id="js-add_artist" class="js-add-li butt butt--add  [ m-1 mb-3 ]" type="button">Add</button>
 									</div>
 								</div>
@@ -563,7 +563,7 @@
 
 								<div class="[ row justify-content-center ]">
 									<div class="[ col-12 text-right pb-4 ]">
-										<button id="js-create_artwork" class="js-create-modal butt butt--create [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artwork">Create</button>
+										<button id="js-create_artwork" class="js-create-modal butt butt--text [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artwork">Create</button>
 										<button id="js-add_artwork" class="js-add-li butt butt--add" type="button">Add</button>
 									</div>
 								</div>
@@ -725,7 +725,7 @@
 				<div class="js-submit-div">
 					<div class="[ row justify-content-center ]">
 						<div class="[ col text-right py-4 ]">
-							<a id="js-cancel_create" class="js-cancel-form butt butt--delete [ btn btn-sm ]" role="button" href="{{ url_for('home') }}">Cancel</a>
+							<a id="js-cancel_create" class="js-cancel-form butt butt--text [ btn btn-sm ]" role="button" href="{{ url_for('home') }}">Cancel</a>
 							<button id="js-post_create" class="js-post-form butt butt--create [ ml-2 ]" type="button" value="Create">Create</button>
 						</div>
 					</div>
@@ -867,7 +867,7 @@
 
 			</div>
 			<div class="[ modal-footer ]">
-				<button id="js-modal-cancel_artwork" class="js-cancel-modal butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
+				<button id="js-modal-cancel_artwork" class="js-cancel-modal butt butt--text" type="button" data-dismiss="modal">Cancel</button>
 				<button id="js-modal-post_artwork" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Create</button>
 			</div>
 		</div>
@@ -888,7 +888,7 @@
 
 			</div>
 			<div class="[ modal-footer ]">
-				<button id="js-modal-cancel_artist" class="js-cancel-modal butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
+				<button id="js-modal-cancel_artist" class="js-cancel-modal butt butt--text" type="button" data-dismiss="modal">Cancel</button>
 				<button id="js-modal-post_artist" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Create</button>
 			</div>
 		</div>
@@ -909,7 +909,7 @@
 
 			</div>
 			<div class="[ modal-footer ]">
-				<button id="js-modal-cancel_park" class="js-cancel-modal butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
+				<button id="js-modal-cancel_park" class="js-cancel-modal butt butt--text" type="button" data-dismiss="modal">Cancel</button>
 				<button id="js-modal-post_park" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Create</button>
 			</div>
 		</div>
@@ -930,7 +930,7 @@
 
 			</div>
 			<div class="[ modal-footer ]">
-				<button id="js-modal-cancel_org" class="js-cancel-modal butt butt--delete" type="button" data-dismiss="modal">Cancel</button>
+				<button id="js-modal-cancel_org" class="js-cancel-modal butt butt--text" type="button" data-dismiss="modal">Cancel</button>
 				<button id="js-modal-post_org" class="js-post-modal butt butt--create" type="button" data-toggle="modal">Create</button>
 			</div>
 		</div>
