--- a/app/templates/artwork.html
+++ b/app/templates/artwork.html
@@ -27,8 +27,8 @@
 		{% if current_user.is_authenticated %}
 			<div class="[ row justify-content-center ]">
 				<div class="[ col-md-8 text-right py-5 ]">
+					<a href="{{ url_for('artwork_delete', id=artwork.id) }}" class="butt butt--text [ btn btn-sm ]" role="button">Delete</a>
 					<button id="js-edit_artwork" class="js-form-edit butt butt--edit" type="button">Edit</button>
-					<a href="{{ url_for('artwork_delete', id=artwork.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
 				</div>
 			</div>
 		{% endif %}
@@ -41,11 +41,11 @@
 
 					<ul class="js-ul_artwork [ p-0 ]">
 
-						<li class="[ row mb-3 align-items-baseline ]">
+						<li class="[ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">
 								{{ form.name.label }}
 							</div>
-							<div class="[ col-md-6 ]">
+							<div class="[ col-lg-7 ]">
 								{{ form.name(class="form-control-plaintext", value=artwork.name) }}
 							</div>
 						</li>
@@ -61,7 +61,7 @@
 		<section id="section--artists">
 			<div class="chunk [ row justify-content-center py-5 ]">
 				<div class="[ col-md-8 ]">
-					<h2 class="[ display-4 pt-4 pb-1 ]">Artists</h2>
+					<h2 class="[ display-4 py-4 ]">Artists</h2>
 
 					<div class="[ row justify-content-center d-none ]">
 						<div class="[ col-12 text-right pb-4 ]">
@@ -72,21 +72,21 @@
 					<ul class="js-ul-child js-ul_artists [ p-0 ]">
 
 						{% for artist in artwork.artists %}
-							<li class="artwork__li--artworks [ row mb-3 align-items-baseline ]">
+							<li class="artwork__li--artworks [ row mb-4 align-items-baseline ]">
 
 								<div class="[ col-md-3 ]">
 									<label for="art_name">Artist</label>
 								</div>
 
 
-								<div class="[ col-10 col-md-6 ]">
+								<div class="[ col-10 col-md-8 col-lg-6 ]">
 									<a href="{{ url_for('artist', id=artist.id) }}" class="is-active">{{ artist.name }}</a>
 
 									<input id="js-datalist_artist-{{ loop.index }}" type="text" name="artists-{{ loop.index }}" list="artists" data-value="{{ artist.id }}" value="{{ artist.name }}" class="js-datalist-child js-datalist_artist [ form-control-plaintext d-none ]" readonly>
 									<!-- Call datalist macro function -->
 									{{ datalist("artists", artists) }}
 								</div>
-								<div class="[ col-2 ]">
+								<div class="[ col-2 col-md-1 ]">
 									<button class="js-delete-li butt butt--delete-icon [ d-none ]" type="button"><i class="far fa-times-circle"></i></button>
 								</div>
 
@@ -108,7 +108,7 @@
 		<section id="section--exhibitions">
 			<div class="chunk [ row justify-content-center py-4 ]">
 				<div class="[ col-md-8 ]">
-					<h2 class="[ display-4 pt-4 pb-2 ]">Exhibitions</h2>
+					<h2 class="[ display-4 py-4 ]">Exhibitions</h2>
 
 					<div class="[ row justify-content-center d-none ]">
 						<div class="[ col-12 text-right pb-4 ]">
@@ -120,19 +120,19 @@
 
 						{% for exhibit in art_exhib %}
 
-							<li class="js-li_exhibition [ row mb-3 align-items-baseline ]">
+							<li class="js-li_exhibition [ row mb-4 align-items-baseline ]">
 
 								<div class="[ col-md-3 ]">
 									<label for="exhibitions">Exhibition</label>
 								</div>
 
-								<div class="[ col-10 col-md-6 mb-1 ]">
+								<div class="[ col-10 col-md-8 col-lg-6 mb-2 ]">
 									<a href="{{ url_for('exhibition', id=exhibit.exhib.id) }}" class="is-active">{{ exhibit.exhib.name }}</a>
 									<input id="js-datalist_exhibition-{{ loop.index }}" type="text" name="exhibitions-{{ loop.index }}" list="exhibitions" data-value="{{ exhibit.exhib.id }}" value="{{ exhibit.exhib.name }}" placeholder="Exhibition Name" class="js-datalist-child js-datalist_exhibition [ form-control-plaintext d-none ]" readonly>
 									{{ datalist("exhibitions", exhibitions) }}
 								</div>
 
-								<div class="[ col-2 col-md-3 align-items-baseline ]">
+								<div class="[ col-2 col-md-1 align-items-baseline ]">
 									<button class="js-delete-li butt butt--delete-icon [ px-2 d-none ]" type="button"><i class="far fa-times-circle"></i></button>
 								</div>
 
@@ -140,7 +140,7 @@
 									<label for="parks">Park</label>
 								</div>
 
-								<div class="[ col-10 col-md-6 ]">
+								<div class="[ col-10 col-md-8 col-lg-6 ]">
 									<a href="{{ url_for('park', id=exhibit.nycpark.id) }}" class="is-active">{{ exhibit.nycpark.name }}</a>
 									<input id="js-datalist_park-{{ loop.index }}" type="text" name="parks-{{ loop.index }}" list="parks" data-value="{{ exhibit.nycpark.id }}" value="{{ exhibit.nycpark.name }}" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control-plaintext d-none ]" readonly>
 									{{ datalist("parks", parks) }}
@@ -165,7 +165,7 @@
 			<section id="section--submit">
 				<div class="[ row justify-content-center d-none py-5 ]">
 					<div class="[ col-md-8 text-right py-4 ]">
-						<button id="js-cancel_artwork" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
+						<button id="js-cancel_artwork" class="butt butt--text js-cancel-form" type="button">Cancel</button>
 						<button id="js-post_artwork" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
 					</div>
 				</div>
@@ -178,15 +178,15 @@
 
 
 <script id="js-template_artist" type="text/template">
-	<li class="js-li_artist [ row mb-3 align-items-baseline ]">
+	<li class="js-li_artist [ row mb-4 align-items-baseline ]">
 		<div class="[ col-md-3 ]">
 			<label for="artists">Artist</label>
 		</div>
-		<div class="[ col-md-6 ]">
+		<div class="[ col-10 col-md-8 col-lg-6 ]">
 			<input id="js-datalist_artist" type="text" name="artists" list="artists" data-value="" value="" placeholder="Artist Name" class="js-datalist-child js-datalist_artist [ form-control ]">
 			{{ datalist("artists", artists) }}
 		</div>
-		<div class="[ col-md-2 ]">
+		<div class="[ col-2 col-md-1 ]">
 			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
@@ -194,21 +194,21 @@
 
 
 <script id="js-template_exhibition" type="text/template">
-	<li class="js-li_exhibition [ row mb-3 align-items-baseline ]">
+	<li class="js-li_exhibition [ row mb-4 align-items-baseline ]">
 		<div class="[ col-md-3 ]">
 			<label for="exhibitions">Exhibition</label>
 		</div>
-		<div class="[ col-10 col-md-6 mb-1 ]">
+		<div class="[ col-10 col-md-8 col-lg-6 mb-2 ]">
 			<input id="js-datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="" value="" placeholder="Exhibition Name" class="js-datalist-child js-datalist_exhibition [ form-control ]">
 			{{ datalist("exhibitions", exhibitions) }}
 		</div>
-		<div class="[ col-2 col-md-3 align-items-baseline ]">
+		<div class="[ col-2 col-md-1 align-items-baseline ]">
 			<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 		<div class="[ col-md-3 ]">
 			<label for="parks">Park</label>
 		</div>
-		<div class="[ col-10 col-md-6 ]">
+		<div class="[ col-10 col-md-8 col-lg-6 ]">
 			<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
 			{{ datalist("parks", parks) }}
 		</div>
