Update col sizing to be consistent w/ other pages
Labels: col-md-3
Single inputs: col-lg-7
2-line inputs: 1: col-10 col-md-8 col-lg-6 mb-2; 2: col-10 col-md-8 col-lg-6

--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -27,8 +27,8 @@
 		{% if current_user.is_authenticated %}
 			<div class="[ row justify-content-center ]">
 				<div class="[ col-md-8 text-right py-5 ]">
+					<a href="{{ url_for('org_delete', id=org.id) }}" class="butt butt--text [ btn btn-sm ]" role="button">Delete</a>
 					<button id="js-edit_org" class="js-form-edit butt butt--edit" type="button">Edit</button>
-					<a href="{{ url_for('org_delete', id=org.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
 				</div>
 			</div>
 		{% endif %}
@@ -42,30 +42,30 @@
 
 					<ul class="js-ul_org [ p-0 ]">
 
-						<li class="[ row mb-3 d-none align-items-baseline ]">
+						<li class="[ row mb-4 d-none align-items-baseline ]">
 							<div class="[ col-md-3 ]">
 								{{ form.name.label }}
 							</div>
-							<div class="[ col-md-6 ]">
+							<div class="[ col-lg-7 ]">
 								{{ form.name(class="form-control-plaintext", value=org.name) }}
 							</div>
 						</li>
 
-						<li class="[ row mb-3 align-items-baseline ]">
+						<li class="[ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">
 								{{ form.website.label }}
 							</div>
-							<div class="[ col-md-6 ]">
+							<div class="[ col-lg-7 ]">
 								<a href="http://{{ org.website }}" class="is-active" target="_blank">{{ org.website }}</a>
 								{{ form.website(class="form-control-plaintext d-none", value=org.website) }}
 							</div>
 						</li>
 
-						<li class="[ row mb-3 align-items-baseline ]">
+						<li class="[ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">
 								{{ form.phone.label }}
 							</div>
-							<div class="[ col-md-6 ]">
+							<div class="[ col-lg-7 ]">
 								{{ form.phone(class="form-control-plaintext", value=org.phone, readonly=true) }}
 							</div>
 						</li>
@@ -83,9 +83,9 @@
 				<div class="[ col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Exhibitions</h2>
 
-					<div class="[ row justify-content-center ]">
-						<div class="[ col-12 text-right py-4 ]">
-							<button id="js-add_exhibition" class="js-add-li butt butt--add [ d-none ml-2 ]" type="button">Add</button>
+					<div class="[ row justify-content-center d-none ]">
+						<div class="[ col-12 text-right pb-4 ]">
+							<button id="js-add_exhibition" class="js-add-li butt butt--add [ ml-2 ]" type="button">Add</button>
 						</div>
 					</div>
 
@@ -93,21 +93,21 @@
 
 						{% for exhibition in org.exhibitions %}
 
-							<li class="org__li--artworks [ row mb-3 align-items-baseline ]">
+							<li class="org__li--artworks [ row mb-4 align-items-baseline ]">
 
 								<div class="[ col-md-3 ]">
 									<label for="art_name">Exhibition</label>
 								</div>
 
 
-								<div class="[ col-10 col-md-6 ]">
+								<div class="[ col-10 col-md-8 col-lg-6 ]">
 									<a href="{{ url_for('exhibition', id=exhibition.id) }}" class="is-active">{{ exhibition.name }}</a>
 
 									<input id="js-datalist_exhibition-{{ loop.index }}" type="text" name="exhibitions-{{ loop.index }}" list="exhibitions" data-value="{{ exhibition.id }}" value="{{ exhibition.name }}" class="js-datalist-child js-datalist_exhibition [ form-control-plaintext d-none ]" readonly>
 									<!-- Call datalist macro function -->
 									{{ datalist("exhibitions", exhibitions) }}
 								</div>
-								<div class="[ col-2 ]">
+								<div class="[ col-2 col-md-1 ]">
 									<button class="js-delete-li butt butt--delete-icon [ d-none ]" type="button"><i class="far fa-times-circle"></i></button>
 								</div>
 
@@ -130,7 +130,7 @@
 			<section id="section--submit">
 				<div class="[ row justify-content-center d-none py-5 ]">
 					<div class="[ col-md-8 text-right py-4 ]">
-						<button id="js-cancel_org" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
+						<button id="js-cancel_org" class="butt butt--text js-cancel-form" type="button">Cancel</button>
 						<button id="js-post_org" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
 					</div>
 				</div>
@@ -143,15 +143,15 @@
 
 
 <script id="js-template_exhibition" type="text/template">
-	<li class="js-li_exhibition [ row mb-3 align-items-baseline ]">
+	<li class="js-li_exhibition [ row mb-4 align-items-baseline ]">
 		<div class="[ col-md-3 ]">
 			<label for="exhibitions">Exhibition</label>
 		</div>
-		<div class="[ col-10 col-md-6 ]">
+		<div class="[ col-10 col-md-8 col-lg-6 ]">
 			<input id="js-datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="" value="" placeholder="Exhibition Name" class="js-datalist-child js-datalist_exhibition [ form-control ]">
 			{{ datalist("exhibitions", exhibitions) }}
 		</div>
-		<div class="[ col-2 ]">
+		<div class="[ col-2 col-md-1 ]">
 			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
