--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -40,48 +40,49 @@
 
 						<ul class="js-ul_artwork [ p-0 ]">
 
-							<li class="[ row mb-3 align-items-baseline d-none ]">
+							<li class="[ row mb-4 align-items-baseline d-none ]">
 								<div class="[ col-md-3 ]">
 									{{ form.fName.label }}
 								</div>
-								<div class="[ col-md-6 ]">
+								<div class="[ col-lg-7 ]">
 									{{ form.fName(class="form-control-plaintext", value=artist.fName) }}
 								</div>
 							</li>
 
-							<li class="[ row mb-3 align-items-baseline d-none ]">
+							<li class="[ row mb-4 align-items-baseline d-none ]">
 								<div class="[ col-md-3 ]">
 									{{ form.pName.label }}
 								</div>
-								<div class="[ col-md-6 ]">
+								<div class="[ col-lg-7 ]">
 									{{ form.pName(class="form-control-plaintext", value=artist.pName) }}
 								</div>
 							</li>
 
-							<li class="[ row mb-3 align-items-baseline ]">
+							<li class="[ row mb-4 align-items-baseline ]">
 								<div class="[ col-md-3 ]">
 									{{ form.email.label }}
 								</div>
-								<div class="[ col-md-6 ]">
-									{{ form.email(class="form-control-plaintext", value=artist.email, readonly=true) }}
+								<div class="[ col-lg-7 ]">
+									<p class="is-active [ m-0 ]"><a href="mailto:{{ artist.email }}" class="is-active">{{ artist.email }}</a></p>
+									{{ form.email(class="form-control-plaintext d-none", value=artist.email, readonly=true) }}
 								</div>
 							</li>
 
-							<li class="[ row mb-3 align-items-baseline ]">
+							<li class="[ row mb-4 align-items-baseline ]">
 								<div class="[ col-md-3 ]">
 									{{ form.phone.label }}
 								</div>
-								<div class="[ col-md-6 ]">
+								<div class="[ col-lg-7 ]">
 									{% if artist.phone %}<p class="is-active [ m-0 ]">{{ artist.phone }}</p>{% endif %}
 									{{ form.phone(class="form-control-plaintext d-none", value=artist.phone,) }}
 								</div>
 							</li>
 
-							<li class="[ row mb-3 align-items-baseline ]">
+							<li class="[ row mb-4 align-items-baseline ]">
 								<div class="[ col-md-3 ]">
 									{{ form.website.label }}
 								</div>
-								<div class="[ col-md-6 ]">
+								<div class="[ col-lg-7 ]">
 									{% if artist.website %}<p class="is-active [ m-0 ]"><a href="http://{{ artist.website }}" class="is-active" target="_blank">{{ artist.website }}</a></p>{% endif %}
 									{{ form.website(class="form-control-plaintext d-none", value=artist.website) }}
 								</div>
@@ -96,7 +97,7 @@
 			<section id="section--artworks">
 				<div class="chunk [ row justify-content-center py-5 ]">
 					<div class="[ col-md-8 ]">
-						<h2 class="[ display-4 pt-4 pb-3 ]">Artworks</h2>
+						<h2 class="[ display-4 py-4 ]">Artworks</h2>
 						
 						<div class="[ row justify-content-center d-none ]">
 							<div class="[ col-12 text-right pb-4 ]">
@@ -107,13 +108,13 @@
 						<ul class="js-ul-child js-ul_artworks [ p-0 ]">
 						
 							{% for artwork in artist.artworks %}
-								<li class="artist__li--artworks [ row mb-3 align-items-baseline ]">
+								<li class="artist__li--artworks [ row mb-4 align-items-baseline ]">
 						
 									<div class="[ col-md-3 ]">
 										<label for="art_name">Artwork</label>
 									</div>
 						
-									<div class="[ col-md-6 ]">
+									<div class="[ col-10 col-md-8 col-lg-6 ]">
 										<a href="{{ url_for('artwork', id=artwork.id) }}" class="is-active">{{ artwork.name }}</a>
 						
 										<input id="js-datalist_artwork-{{ loop.index }}" type="text" name="artworks-{{ loop.index }}" list="artworks" data-value="{{ artwork.id }}" value="{{ artwork.name }}" class="js-datalist-child js-datalist_artwork [ form-control-plaintext d-none ]">
@@ -121,7 +122,7 @@
 										{{ datalist("artworks", artworks) }}
 									</div>
 						
-									<div class="[ col-2 text-right ]">
+									<div class="[ col-2 col-md-1 text-right ]">
 										<button class="js-delete-li butt butt--delete-icon [ d-none ]" type="button"><i class="far fa-times-circle"></i></button>
 									</div>
 						
@@ -163,7 +164,7 @@
 
 											{% if thing.Artwork.id == artwork.id %}
 
-												<li class="artist__li--exhibitions [ row mb-3 align-items-center ]">
+												<li class="artist__li--exhibitions [ row mb-4 align-items-center ]">
 
 													<div class="[ col-md-1 ]" hidden>
 														<label for="exh_name">Artwork</label>
@@ -239,18 +240,18 @@
 </div>
 <!-- Empty artwork template -->
 <script id="js-template_artwork" type="text/template">
-	<li class="artist__li--artworks [ row mb-3 align-items-baseline ]">
+	<li class="artist__li--artworks [ row mb-4 align-items-baseline ]">
 
 		<div class="[ col-md-3 ]">
 			<label for="art_name">Artwork</label>
 		</div>
 
-		<div class="[ col-md-6 ]">
+		<div class="[ col-10 col-md-8 col-lg-6 ]">
 			<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
 			{{ datalist("artworks", artworks) }}
 		</div>
 
-		<div class="[ col-2 text-right ]">
+		<div class="[ col-2 col-md-1 text-right ]">
 			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 
