Add disabled attribute to form.phone input

--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -66,7 +66,7 @@
 								{{ form.phone.label }}
 							</div>
 							<div class="[ col-lg-7 ]">
-								{{ form.phone(class="form-control-plaintext", value=org.phone, readonly=true) }}
+								{{ form.phone(class="form-control-plaintext", value=org.phone, readonly=true, disabled=true) }}
 							</div>
 						</li>
 
