--- a/app/static/style/src/base/_buttons.scss
+++ b/app/static/style/src/base/_buttons.scss
@@ -10,7 +10,7 @@ COLORS
 general   - grey
 create    - green
 delete    - red
-edit      - yellow
+edit      - orange
 add       - blue
 */
 
@@ -22,45 +22,50 @@ add       - blue
   border-width: 2.5px;
   border-style: solid;
   border-radius: 4px;
-  border-color: color(grey);
-  background-color: color(grey);
-  color: color(grey--l);
   font-size: 1rem;
   padding: .25rem 2.25rem;
   transition: .15s;
-}
+  /* @include butts(grey--l, grey, grey) */
+  border-color: color(grey);
+  background-color: color(grey);
+  color: color(grey--l);
 
-  .butt a {
+  a {
     color: inherit;
     text-decoration: none;
   }
 
-  .butt:hover {
+  &:hover {
+    /* @include butts(grey--l, grey--d, grey--d) */
     color: color(grey--l);
     border-color: color(grey--d);
     background-color: color(grey--d);
   }
 
-  .butt:active {
+  &:active {
+    /* @include butts(grey--l, grey--d, grey) */
     border-color: color(grey) !important;
     background-color: color(grey--l) !important;
     color: color(grey--d) !important;
   }
+}
 
 
-.butt--text {
+.butt--text, .butt--text a {
+  /* @include butts(grey, transparent, transparent) */
   background: none;
   border: none;
   color: color(grey) !important;
   padding: 0;
   margin: .25rem 2.25rem;
-}
 
-  .butt--text:hover, .butt--text a:hover {
+  &:hover {
+    /* @include butts(grey--d, transparent, transparent) */
     color: color(grey--d) !important;
     border-color: transparent !important;
     background-color: transparent !important;
   }
+}
 
 
 /* .butt--right: Rounded corners on right side only */
@@ -77,138 +82,143 @@ add       - blue
 }
 
 
-
 /* .butt--create: Used for submit/create buttons */
 .butt--create {
+  /* @include butts(grey--l, green--l, green--l) */
   background-color: color(green--l) !important;
   border-color: color(green--l) !important;
   color: color(grey--l) !important;
-}
 
-  .butt--create:hover {
+  &:hover {
+    /* @include butts(grey--l, green--d, green--d) */
     color: color(grey--l) !important;
     border-color: color(green--d) !important;
     background-color: color(green--d) !important;
   }
 
-  .butt--create:active {
+  &:active {
+    /* @include butts(green--d, grey--l, green--l) */
     border-color: color(green--l) !important;
     background-color: color(grey--l) !important;
     color: color(green--d) !important;
   }
+}
 
 
 
 /* .butt--delete: Used for delete/cancel buttons */
 .butt--delete, .butt--delete a {
+  /* @include butts(grey--l, red--l, red--l) */
   background-color: color(red--l) !important;
   border-color: color(red--l) !important;
   color: color(grey--l);
   vertical-align: inherit;
-}
 
-  .butt--delete:hover, .butt--delete a:hover {
+  &:hover {
+    /* @include butts(grey--l, red--d, red--d) */
     color: color(grey--l) !important;
     border-color: color(red--d) !important;
     background-color: color(red--d) !important;
   }
 
-  .butt--delete:active {
+  &:active {
+    /* @include butts(red--d, grey--l, red--l) */
     border-color: color(red--l) !important;
     background-color: color(grey--l) !important;
     color: color(red--d) !important;
   }
-
-
-.butt--delete-secondary {
-  background: none;
-  border: none;
-  color: color(red--d) !important;
 }
-
-  .butt--delete-secondary:hover, .butt--delete-secondary a:hover {
-    border-color: color(red--d) !important;
-    background-color: color(red--d) !important;
-  }
 
 
 
 /* .butt--delete-icon: Used for X icon for delete/remove buttons */
 .butt--delete-icon {
+    /* @include butts(red--l, transparent, transparent) */
   color: color(red--l) !important;
   border: none;
   background-color: transparent;
   padding: 0;
-}
 
-  .butt--delete-icon:hover {
+  &:hover {
+    /* @include butts(red--d, transparent, transparent) */
     color: color(red--d) !important;
     border: none;
     background-color: transparent;
   }
 
-  .butt--delete-icon:active {
+  &:active {
+    /* @include butts(red--l, transparent, transparent) */
     border-color: color(red--l) !important;
     border: none;
     background-color: transparent;
   }
+}
 
 
 
 /* .butt--edit: Used for edit buttons */
 .butt--edit {
+    /* @include butts(grey--l, orange--l, orange--l) */
   border-color: color(orange--l) !important;
   background-color: color(orange--l) !important;
   color: color(grey--l) !important;
-}
 
-  .butt--edit:hover {
+  &:hover {
+    /* @include butts(grey--l, orange--d, orange--d) */
     border-color: color(orange--d) !important;
     background-color: color(orange--d) !important;
     color: color(grey--l) !important;
   }
 
-  .butt--edit:active {
+  &:active {
+    /* @include butts(orange--d, grey--l, orange--l) */
     border-color: color(orange--l) !important;
     background-color: color(grey--l) !important;
     color: color(orange--d) !important;
   }
+}
 
 
 
 /* .butt--add: Used for add buttons */
 .butt--add {
+  /* @include butts(grey--l, blue--l, blue--l) */
   border-color: color(blue--l);
   background-color: color(blue--l);
   color: color(grey--l);
-}
 
-  .butt--add:hover {
+  &:hover {
+    /* @include butts(grey--l, blue--d, blue--d) */
     border-color: color(blue--d);
     background-color: color(blue--d);
     color: color(grey--l);
   }
 
-  .butt--add:active {
+  &:active {
+    /* @include butts(blue--d, grey--l, blue--l) */
     border-color: color(blue--l);
     background-color: color(grey--l);
     color: color(blue--d);
   }
+}
 
 
 
 /* .butt--add-icon: Used for + icon for add buttons */
 .butt--add-icon {
+  /* @include butts(blue--l, transparent, transparent) */
   color: color(blue--l);
   border: none;
-}
 
-  .butt--add-icon:hover {
+  &:hover {
+    /* @include butts(blue--d, transparent, transparent) */
     color: color(blue--d);
     border: none;
   }
 
-  .butt--add-icon:active {
+  &:active {
+    /* @include butts(blue--l, transparent, transparent) */
     border-color: color(blue--l);
     border: none;
   }
+}
