--- a/app/static/style/src/base/_layout.scss
+++ b/app/static/style/src/base/_layout.scss
@@ -60,9 +60,8 @@
     .site-nav__link {
       padding: 0;
       font-size: 3rem;
-    }
 
-      .site-nav__link a {
+      & a {
         color: color(grey--d);
         text-decoration: none;
         border-bottom: none;
@@ -72,15 +71,14 @@
         height: 100%;
       }
 
+      &:hover a {
+        color:  color(green--d);
+      }
+    }
+
         .site-nav__link-text {
           border-bottom: 2px solid color(green--d);
         }
-
-
-
-      .site-nav__link:hover a {
-        color:  color(green--d);
-      }
 
 
 .chunk {
