--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -41,7 +41,7 @@
 
 						<li class="[ row mb-4 align-items-baseline d-none ]">
 							<div class="[ col-md-3 ]">{{ form.name.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.name(class="form-control-plaintext", value=exhibition.name) }}</div>
+							<div class="[ col-lg-7 ]">{{ form.name(class="form-control-plaintext input--attr", value=exhibition.name) }}</div>
 						</li>
 
 						<li class="is-active [ row mb-4 align-items-baseline ]">
@@ -51,25 +51,25 @@
 
 						<li class="[ row mb-4 align-items-baseline d-none ]">
 							<div class="[ col-md-3 ]">{{ form.start_date.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.start_date(class="form-control-plaintext", value=exhibition.start_date, readonly=true) }}</div>
+							<div class="[ col-lg-7 ]">{{ form.start_date(class="form-control-plaintext input--attr", value=exhibition.start_date, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 align-items-baseline d-none ]">
 							<div class="[ col-md-3 ]">{{ form.end_date.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.end_date(class="form-control-plaintext", value=exhibition.end_date, readonly=true) }}</div>
+							<div class="[ col-lg-7 ]">{{ form.end_date(class="form-control-plaintext input--attr", value=exhibition.end_date, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">{{ form.opening.label }}</div>
 							<div class="is-active [ col-lg-7 ]">{% if exhibition.opening %}{{ exhibition.opening|date_format }}{% else %}None{% endif %}</div>
-							<div class="[ col-lg-7 d-none ]">{{ form.opening(class="form-control-plaintext", value=exhibition.opening, readonly=true) }}</div>
+							<div class="[ col-lg-7 d-none ]">{{ form.opening(class="form-control-plaintext input--attr", value=exhibition.opening, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 align-items-baseline ]">
 							<div class="[ col-md-3 ]">{{ form.comments.label }}</div>
 							<div class="[ col-lg-7 ]">
 								<p class="is-active [ m-0 ]">{{ exhibition.comments }}</p>
-								{{ form.comments(class="form-control-plaintext d-none", value=exhibition.comments, readonly=true, disabled=true) }}
+								{{ form.comments(class="form-control-plaintext input--attr d-none", value=exhibition.comments, readonly=true, disabled=true) }}
 							</div>
 						</li>
 
@@ -130,7 +130,7 @@
 							</div>
 								<div class="[ col-10 col-md-8 col-lg-6 ]">
 									<a href="{{ url_for('org', id=org.id) }}" class="is-active">{{ org.name }}</a>
-									<input id="js-datalist_org-{{ loop.index }}" type="text" name="orgs-{{ loop.index }}" list="orgs" data-value="{{ org.id }}" value="{{ org.name }}" class="js-datalist-child js-datalist_org [ form-control-plaintext d-none ]">
+									<input id="js-datalist_org-{{ loop.index }}" type="text" name="orgs-{{ loop.index }}" list="orgs" data-value="{{ org.id }}" value="{{ org.name }}" class="js-datalist-child js-datalist_org input--attr [ form-control-plaintext d-none ]">
 									{{ datalist("orgs", orgs) }}
 								</div>
 								<div class="[ col-2 col-md-1 ]">
@@ -171,7 +171,7 @@
 								</div>
 								<div class="[ col-10 col-md-8 col-lg-6 mb-2 ]">
 									<a href="{{ url_for('artwork', id=item.artw.id) }}" class="is-active">{{ item.artw.name }}</a>
-									<input id="js-datalist_artwork-{{ loop.index }}" type="text" name="artworks-{{ loop.index }}" list="artworks" data-value="{{ item.artw.id }}" value="{{ item.artw.name }}" class="js-datalist-child js-datalist_artwork [ form-control-plaintext d-none ]">
+									<input id="js-datalist_artwork-{{ loop.index }}" type="text" name="artworks-{{ loop.index }}" list="artworks" data-value="{{ item.artw.id }}" value="{{ item.artw.name }}" class="js-datalist-child js-datalist_artwork input--attr [ form-control-plaintext d-none ]">
 									{{ datalist("artworks", artworks) }}
 								</div>
 								<div class="[ col-2 col-md-1 ]">
@@ -183,7 +183,7 @@
 								</div>
 								<div class="[ col-10 col-md-8 col-lg-6 ]">
 									<a href="{{ url_for('park', id=item.nycpark.id) }}" class="is-active">{{ item.nycpark.name }}</a>
-									<input id="js-datalist_park-{{ loop.index }}" type="text" name="parks-{{ loop.index }}" list="parks" data-value="{{ item.nycpark.id }}" value="{{ item.nycpark.name }}" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control-plaintext d-none ]">
+									<input id="js-datalist_park-{{ loop.index }}" type="text" name="parks-{{ loop.index }}" list="parks" data-value="{{ item.nycpark.id }}" value="{{ item.nycpark.name }}" placeholder="Park Name" class="js-datalist-child js-datalist_park input--attr [ form-control-plaintext d-none ]">
 									{{ datalist("parks", parks) }}
 								</div>
 							</li>
@@ -215,12 +215,12 @@
 
 						<li class="[ row mb-4 d-none ]">
 							<div class="[ col-md-3 ]">{{ form.install_start.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.install_start(class="form-control-plaintext", value=exhibition.install_start, readonly=true) }}</div>
+							<div class="[ col-lg-7 ]">{{ form.install_start(class="form-control-plaintext input--attr", value=exhibition.install_start, readonly=true) }}</div>
 						</li>
 
 						<li class="[ row mb-4 d-none ]">
 							<div class="[ col-md-3 ]">{{ form.install_end.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.install_end(class="form-control-plaintext", value=exhibition.install_end, readonly=true) }}</div>
+							<div class="[ col-lg-7 ]">{{ form.install_end(class="form-control-plaintext input--attr", value=exhibition.install_end, readonly=true) }}</div>
 						</li>
 
 <!-- 						<li class="[ row mb-4 ]">
@@ -328,7 +328,7 @@
 
 						<li class="[ row mb-4 align-items-baseline d-none ]">
 							<div class="[ col-md-3 ]">{{ form.deinstall_date.label }}</div>
-							<div class="[ col-lg-7 ]">{{ form.deinstall_date(class="form-control-plaintext", value=exhibition.deinstall_date, readonly=true) }}</div>
+							<div class="[ col-lg-7 ]">{{ form.deinstall_date(class="form-control-plaintext input--attr", value=exhibition.deinstall_date, readonly=true) }}</div>
 						</li>
 
 <!-- 						<li class="[ row mb-4 ]">
@@ -376,7 +376,7 @@
 			<label for="artworks">Artwork</label>
 		</div>
 		<div class="[ col-10 col-md-8 col-lg-6 mb-2 ]">
-			<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
+			<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork input--attr [ form-control ]">
 			{{ datalist("artworks", artworks) }}
 		</div>
 		<div class="[ col-2 col-md-1 ]">
@@ -386,7 +386,7 @@
 			<label for="artworks">Park</label>
 		</div>
 		<div class="[ col-10 col-md-6 ]">
-			<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
+			<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park input--attr [ form-control ]">
 			{{ datalist("parks", parks) }}
 		</div>
 	</li>
@@ -400,7 +400,7 @@
 			<label for="artworks">Organization</label>
 		</div>
 		<div class="[ col-10 col-md-8 col-lg-6 ]">
-			<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org [ form-control ]">
+			<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org input--attr [ form-control ]">
 			{{ datalist("orgs", orgs) }}
 		</div>
 		<div class="[ col-2 col-md-1 ]">
